@@ -206,7 +206,7 @@ public @interface CsvFileSource {
 	/**
 	 * The maximum number of characters allowed per CSV column.
 	 *
-	 * <p>Must be a positive number.
+	 * <p>Must be a positive number or -1 to allow an unlimited number of chars.
 	 *
 	 * <p>Defaults to {@code 4096}.
 	 *
